<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.ui.dashboard.DashboardFragment">

    <RelativeLayout
        android:id="@+id/dashboard_header_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/login_activity_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_menu_24"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/stockbit_logo"
            android:layout_toStartOf="@id/login_activity_support"
            android:layout_toEndOf="@id/login_activity_back_button"/>


        <ImageView
            android:id="@+id/login_activity_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_insert_drive_file_24"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dashboard_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dashboard_header_bar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/all_watchlist"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:src="@drawable/ic_chevron_down_black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_baseline_add_circle_outline_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorGrey"
                android:text="@string/add_symbol"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/dashboard_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/dashboard_nav_view"
        android:background="@color/colorDivider"
        android:layout_marginBottom="@dimen/ten_dp"/>

    <FrameLayout
        android:id="@+id/dashboard_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dashboard_divider"
        android:layout_above="@id/dashboard_bottom_drawer">

        <LinearLayout
            android:id="@+id/no_task_layout_activity_dashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_no_task"/>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_content"
                android:gravity="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/failed_connect_layout_activity_dashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_plug"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_internet_connection"
                android:gravity="center"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/swipe_down_message"
                android:gravity="center"/>
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dashboard_refresh_layout">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dashboard_recycler_view" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/dashboard_bottom_drawer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="@dimen/bottom_bar_size"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_baseline_star_border_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watchlist"
                android:textColor="@color/colorGreen"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/bottom_bar_size"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_outline_article_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stream"
                android:textColor="@color/colorGrey"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/bottom_bar_size"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_baseline_search_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/colorGrey"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/bottom_bar_size"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_baseline_chat_bubble_outline_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat"
                android:textColor="@color/colorGrey"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/bottom_bar_size"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_baseline_pie_chart_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portfolio"
                android:textColor="@color/colorGrey"
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>
    
</RelativeLayout>
